[gd_scene format=3 uid="uid://br5kmpklfad50"]

[ext_resource type="Texture2D" uid="uid://cqw0huwykqgy6" path="res://Assets/Kenneys/Spritesheets/spritesheet-enemies-default.png" id="1_d77sy"]
[ext_resource type="Script" uid="uid://c7bds2wlp6gbr" path="res://Enemy Folder/Slime/slime.gd" id="1_w571m"]
[ext_resource type="Script" uid="uid://bgxf5e2vkqcsb" path="res://Components/EnemyControlComponent.gd" id="2_jtink"]
[ext_resource type="Script" uid="uid://bfl1jsgloerd1" path="res://Components/AIWallFloorComponent.gd" id="4_a6kpq"]
[ext_resource type="Script" uid="uid://d2rvwcr6fdon5" path="res://Combat/HurtArea2D.gd" id="5_a6kpq"]
[ext_resource type="Script" uid="uid://cxljn6crumpg3" path="res://Combat/HitArea2D.gd" id="6_t16yc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jtink"]
atlas = ExtResource("1_d77sy")
region = Rect2(325, 325, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_choi2"]
atlas = ExtResource("1_d77sy")
region = Rect2(260, 325, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_w571m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtink")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_choi2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_choi2"]
size = Vector2(62, 42)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5go65"]
radius = 21.0
height = 74.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0rhry"]
radius = 21.023796

[node name="Slime0" type="CharacterBody2D" unique_id=1867492221 groups=["Bounceable", "Enemy"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_w571m")

[node name="Sprite" type="AnimatedSprite2D" parent="." unique_id=187601357]
position = Vector2(0, -32)
sprite_frames = SubResource("SpriteFrames_w571m")
autoplay = "default"
frame_progress = 0.59937686

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1508830765]
position = Vector2(0, -21)
shape = SubResource("RectangleShape2D_choi2")
debug_color = Color(0, 0.6, 0.69803923, 0)

[node name="EnemyControlComponent" type="Node" parent="." unique_id=78735701 node_paths=PackedStringArray("actor")]
script = ExtResource("2_jtink")
actor = NodePath("..")
metadata/_custom_type_script = "uid://bgxf5e2vkqcsb"

[node name="AIWallFloorComponent" type="Node" parent="." unique_id=1610035473 node_paths=PackedStringArray("left_wall_ray", "right_wall_ray")]
script = ExtResource("4_a6kpq")
left_wall_ray = NodePath("../LeftWall")
right_wall_ray = NodePath("../RightWall")
metadata/_custom_type_script = "uid://bfl1jsgloerd1"

[node name="LeftWall" type="RayCast2D" parent="." unique_id=593211734]
position = Vector2(0, -21)
target_position = Vector2(-40, 0)
collision_mask = 3

[node name="RightWall" type="RayCast2D" parent="." unique_id=750388478]
position = Vector2(0, -21)
target_position = Vector2(40, 0)
collision_mask = 3

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="." unique_id=251925030]
rect = Rect2(-44, -43, 88, 45)

[node name="HurtArea2D" type="Area2D" parent="." unique_id=531080923]
collision_layer = 0
collision_mask = 8
script = ExtResource("5_a6kpq")
metadata/_custom_type_script = "uid://d2rvwcr6fdon5"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea2D" unique_id=1453120573]
position = Vector2(0, -21)
rotation = -1.5707964
shape = SubResource("CapsuleShape2D_5go65")
debug_color = Color(0.92156863, 0, 0.69411767, 0)

[node name="HitArea2D" type="Area2D" parent="." unique_id=241315806]
collision_layer = 16
collision_mask = 0
script = ExtResource("6_t16yc")
metadata/_custom_type_script = "uid://cxljn6crumpg3"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea2D" unique_id=2102325538]
position = Vector2(0, -21)
shape = SubResource("CircleShape2D_0rhry")
debug_color = Color(0.7019608, 0, 0, 0.10980392)

[connection signal="switch_left" from="AIWallFloorComponent" to="." method="_on_ai_wall_floor_component_switch_left"]
[connection signal="switch_right" from="AIWallFloorComponent" to="." method="_on_ai_wall_floor_component_switch_right"]
[connection signal="screen_entered" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_entered"]
[connection signal="hurt" from="HurtArea2D" to="." method="_on_hurt_area_2d_hurt"]
